--- a/style.css
+++ b/style.css
@@ -62,6 +62,10 @@ header nav li {
   margin-left: 86px;
 }
 
+body > section {
+  display: none;
+}
+
 nav li a {
   font-family: var(--primary-font);
   font-weight: var(--medium);
@@ -144,6 +148,7 @@ main section:last-child div img {
 }
 
 #name {
+  margin: 0;
   font-weight: var(--medium);
 }
 
@@ -174,7 +179,7 @@ footer {
   }
 }
 
-@media (orientation: portrait), (max-width: 768px) {
+@media (max-width: 768px) {
   body {
     padding: 12px 19px;
   }
@@ -189,13 +194,12 @@ footer {
   }
 }
 
-@media (orientation: portrait) {
+@media (max-width: 600px) {
   header nav {
     display: none;
   }
 
   body > section {
-    display: none;
     background-color: var(--elevated-bg-color);
     position: fixed;
     top: 0;
